[package]
name = "tor-cert"
version = "0.38.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Non-standard certificate formats used by Tor"
keywords = ["tor", "arti", "certificate"]
categories = ["parser-implementations"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"
[package.metadata.docs.rs]
all-features = true

[features]
default = []
experimental = ["encode", "experimental-api"]
encode = ["derive_builder", "__is_experimental"]
full = [
    "caret/full",
    "tor-bytes/full",
    "tor-cert-x509/full",
    "tor-checkable/full",
    "tor-llcrypto/full",
    "x509",
    "tor-error/full",
]
x509 = ["tor-cert-x509"]
# Enable experimental APIs that are not yet officially supported.
#
# These APIs are not covered by semantic versioning.  Using this
# feature voids your "semver warrantee".

experimental-api = ["__is_experimental"]

__is_experimental = []

[dependencies]
caret = { path = "../caret", version = "0.8.0" }
derive_builder = { version = "0.11.2", package = "derive_builder_fork_arti", optional = true }
derive_more = { version = "2.0.1", features = ["full"] }
digest = "0.10.0"
ecdsa = { version = "0.16.9", features = ["der", "pkcs8", "signing", "verifying"], optional = true }
thiserror = "2"
tor-bytes = { path = "../tor-bytes", version = "0.38.0" }
tor-cert-x509 = { path = "../tor-cert-x509", version = "0.38.0", optional = true }
tor-checkable = { path = "../tor-checkable", version = "0.38.0" }
tor-error = { path = "../tor-error", version = "0.38.0" }
tor-llcrypto = { path = "../tor-llcrypto", version = "0.38.0" }

[dev-dependencies]
base64ct = "1.5.1"
hex-literal = "1.0"
humantime = "2"
rand = "0.9.1"
tor-basic-utils = { path = "../tor-basic-utils", version = "0.38.0" }
