[package]
name = "tor-chanmgr"
version = "0.22.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Manage a set of connections to the Tor network"
keywords = ["tor", "arti", "async"]
categories = ["network-programming", "cryptography"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = []
experimental = ["experimental-api", "relay", "testing"]
experimental-api = ["__is_experimental"]
full = [
    "pt-client",
    "safelog/full",
    "tor-basic-utils/full",
    "tor-cell/full",
    "tor-config/full",
    "tor-error/full",
    "tor-linkspec/full",
    "tor-llcrypto/full",
    "tor-netdir/full",
    "tor-proto/full",
    "tor-rtcompat/full",
    "tor-socksproto/full",
    "tor-units/full",
    "tor-async-utils/full",
    "oneshot-fused-workaround/full",
]

pt-client = ["tor-linkspec/pt-client"]

relay = ["__is_experimental"]
testing = ["__is_experimental"]
__is_experimental = []

[dependencies]
async-trait = "0.1.54"
derive_builder = { version = "0.11.2", package = "derive_builder_fork_arti" }
derive_more = "0.99.3"
educe = "0.4.6"
futures = "0.3.14"
oneshot-fused-workaround = { path = "../oneshot-fused-workaround", version = "0.1.0" }
postage = { version = "0.5.0", default-features = false, features = ["futures-traits"] }
rand = "0.8"
safelog = { path = "../safelog", version = "0.3.6" }
serde = { version = "1.0.103", features = ["derive"] }
thiserror = "1"
tor-async-utils = { version = "0.22.0", path = "../tor-async-utils" }
tor-basic-utils = { path = "../tor-basic-utils", version = "0.22.0" }
tor-cell = { path = "../tor-cell", version = "0.22.0" }
tor-config = { path = "../tor-config", version = "0.22.0" }
tor-error = { path = "../tor-error", version = "0.22.0", features = ["tracing"] }
tor-linkspec = { path = "../tor-linkspec", version = "0.22.0" }
tor-llcrypto = { path = "../tor-llcrypto", version = "0.22.0" }
tor-netdir = { path = "../tor-netdir", version = "0.22.0" }
tor-proto = { path = "../tor-proto", version = "0.22.0" }
tor-rtcompat = { path = "../tor-rtcompat", version = "0.22.0" }
tor-socksproto = { path = "../tor-socksproto", version = "0.22.0", default-features = false, features = [
    "client-handshake",
] }
tor-units = { path = "../tor-units", version = "0.22.0" }
tracing = "0.1.36"
void = "1"

[dev-dependencies]
float_eq = "1.0.0"
futures-await-test = "0.3.0"
hex-literal = "0.4"
itertools = "0.13.0"
tor-cell = { path = "../tor-cell", version = "0.22.0", features = ["testing"] }
tor-netdir = { path = "../tor-netdir", version = "0.22.0", features = ["testing"] }
tor-proto = { path = "../tor-proto", version = "0.22.0", features = ["testing"] }
tor-rtcompat = { path = "../tor-rtcompat", version = "0.22.0", features = ["tokio", "native-tls"] }
tor-rtmock = { path = "../tor-rtmock", version = "0.22.0" }
[package.metadata.docs.rs]
all-features = true
