[package]
name = "tor-chanmgr"
version = "0.39.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Manage a set of connections to the Tor network"
keywords = ["tor", "arti", "async"]
categories = ["network-programming", "cryptography"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = []
experimental = ["experimental-api", "relay", "testing"]
experimental-api = ["__is_experimental"]
full = [
    "pt-client",
    "safelog/full",
    "tor-basic-utils/full",
    "tor-cell/full",
    "tor-config/full",
    "tor-error/full",
    "tor-keymgr/full",
    "tor-linkspec/full",
    "tor-llcrypto/full",
    "tor-netdir/full",
    "tor-proto/full",
    "tor-rtcompat/full",
    "tor-socksproto/full",
    "tor-units/full",
    "tor-async-utils/full",
    "oneshot-fused-workaround/full",
    "tor-memquota/full",
    "caret/full",
]

pt-client = ["tor-linkspec/pt-client"]

relay = ["__is_experimental", "tor-proto/relay"]
testing = ["__is_experimental"]
__is_experimental = []

[dependencies]
async-trait = "0.1.54"
caret = { path = "../caret", version = "0.8.0" }
cfg-if = "1.0.0"
derive_builder = { version = "0.11.2", package = "derive_builder_fork_arti" }
derive_more = { version = "2.0.1", features = ["full"] }
educe = "0.4.22"
futures = "0.3.14"
oneshot-fused-workaround = { path = "../oneshot-fused-workaround", version = "0.5.0" }
postage = { version = "0.5.0", default-features = false, features = ["futures-traits"] }
rand = "0.9.1"
safelog = { path = "../safelog", version = "0.7.0" }
serde = { version = "1.0.103", features = ["derive"] }
thiserror = "2"
tor-async-utils = { version = "0.39.0", path = "../tor-async-utils" }
tor-basic-utils = { path = "../tor-basic-utils", version = "0.39.0" }
tor-cell = { path = "../tor-cell", version = "0.39.0" }
tor-config = { path = "../tor-config", version = "0.39.0" }
tor-error = { path = "../tor-error", version = "0.39.0", features = ["tracing"] }
tor-keymgr = { path = "../tor-keymgr", version = "0.39.0", features = ["keymgr"] }
tor-linkspec = { path = "../tor-linkspec", version = "0.39.0" }
tor-llcrypto = { path = "../tor-llcrypto", version = "0.39.0" }
tor-memquota = { version = "0.39.0", path = "../tor-memquota", default-features = false }
tor-netdir = { path = "../tor-netdir", version = "0.39.0" }
tor-proto = { path = "../tor-proto", version = "0.39.0" }
tor-rtcompat = { path = "../tor-rtcompat", version = "0.39.0" }
tor-socksproto = { path = "../tor-socksproto", version = "0.39.0", default-features = false, features = [
    "client-handshake",
] }
tor-units = { path = "../tor-units", version = "0.39.0" }
tracing = "0.1.36"
void = "1"

[dev-dependencies]
float_eq = "1.0.0"
futures-await-test = "0.3.0"
hex-literal = "1.0"
itertools = "0.14.0"
tor-cell = { path = "../tor-cell", version = "0.39.0", features = ["testing"] }
tor-netdir = { path = "../tor-netdir", version = "0.39.0", features = ["testing"] }
tor-proto = { path = "../tor-proto", version = "0.39.0", features = ["testing"] }
tor-rtcompat = { path = "../tor-rtcompat", version = "0.39.0", features = ["tokio", "native-tls"] }
tor-rtmock = { path = "../tor-rtmock", version = "0.39.0" }
[package.metadata.docs.rs]
all-features = true
