[package]
name = "tor-checkable"
version = "0.4.3"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Types to ensure that signed or time-bound data is validated before use"
keywords = ["tor", "arti", "typestate"]
categories = ["cryptography", "rust-patterns"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
experimental = ["experimental-api"]
experimental-api = []

[dependencies]
humantime = "2"
signature = "1"
thiserror = "1"
tor-llcrypto = { path = "../tor-llcrypto", version = "0.4.3" }
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
[dev-dependencies]
humantime = "2"
