[package]
name = "tor-circmgr"
version = "0.21.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Manage a set of anonymous circuits over the Tor network"
keywords = ["tor", "arti", "async"]
categories = ["network-programming", "cryptography"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[features]

default = []
full = [
    "hs-client",
    "hs-service",
    "specific-relay",
    "vanguards",
    "retry-error/full",
    "safelog/full",
    "tor-basic-utils/full",
    "tor-chanmgr/full",
    "tor-config/full",
    "tor-error/full",
    "tor-guardmgr/full",
    "tor-linkspec/full",
    "tor-netdir/full",
    "tor-netdoc/full",
    "tor-persist/full",
    "tor-proto/full",
    "tor-rtcompat/full",
    "tor-geoip?/full",
    "tor-async-utils/full",
    "tor-protover/full",
    "tor-relay-selection/full",
    "oneshot-fused-workaround/full",
]
specific-relay = []
vanguards = ["tor-guardmgr/vanguards"]

# Enable testing-only APIs.  APIs under this feature are not
# covered by semver.
testing = ["tor-guardmgr/testing", "__is_experimental"]

# Enable experimental APIs that are not yet officially supported.
#
# These APIs are not covered by semantic versioning.  Using this
# feature voids your "semver warrantee".
experimental = ["experimental-api", "ntor_v3", "testing", "geoip"]
geoip = ["tor-geoip", "tor-netdir/geoip", "tor-relay-selection/geoip", "__is_experimental"]
experimental-api = ["visibility", "__is_experimental"]
ntor_v3 = ["tor-proto/ntor_v3", "__is_experimental"]
hs-client = ["hs-common"]
hs-service = ["hs-common"]
hs-common = []
__is_experimental = []

[dependencies]
amplify = { version = "4", default-features = false, features = ["derive"] }
async-trait = "0.1.54"
bounded-vec-deque = "0.1"
cfg-if = "1.0.0"
derive_builder = { version = "0.11.2", package = "derive_builder_fork_arti" }
derive_more = "0.99.3"
downcast-rs = "1.2.0"
dyn-clone = "1.0.4"
educe = "0.4.6"
futures = "0.3.14"
humantime-serde = "1.1.1"
itertools = "0.13.0"
once_cell = "1"
oneshot-fused-workaround = { path = "../oneshot-fused-workaround", version = "0.1.0" }
pin-project = "1"
rand = "0.8"
retry-error = { path = "../retry-error", version = "0.5.2" }
safelog = { path = "../safelog", version = "0.3.6" }
serde = { version = "1.0.103", features = ["derive"] }
static_assertions = "1"
thiserror = "1"
tor-async-utils = { version = "0.21.0", path = "../tor-async-utils" }
tor-basic-utils = { path = "../tor-basic-utils", version = "0.21.0" }
tor-chanmgr = { path = "../tor-chanmgr", version = "0.21.0" }
tor-config = { path = "../tor-config", version = "0.21.0" }
tor-error = { path = "../tor-error", version = "0.21.0", features = ["tracing"] }
tor-geoip = { path = "../tor-geoip", version = "0.21.0", optional = true }
tor-guardmgr = { path = "../tor-guardmgr", version = "0.21.0" }
tor-linkspec = { path = "../tor-linkspec", version = "0.21.0" }
tor-netdir = { path = "../tor-netdir", version = "0.21.0" }
tor-netdoc = { path = "../tor-netdoc", version = "0.21.0" }
tor-persist = { path = "../tor-persist", version = "0.21.0" }
tor-proto = { path = "../tor-proto", version = "0.21.0" }
tor-protover = { path = "../tor-protover", version = "0.21.0" }
tor-relay-selection = { path = "../tor-relay-selection", version = "0.21.0" }
tor-rtcompat = { path = "../tor-rtcompat", version = "0.21.0" }
tracing = "0.1.36"
visibility = { version = "0.1.0", optional = true }
void = "1.0"
weak-table = "0.3.0"

[dev-dependencies]
futures-await-test = "0.3.0"
hex = "0.4"
tor-guardmgr = { path = "../tor-guardmgr", version = "0.21.0", features = ["testing", "vanguards"] }
tor-llcrypto = { path = "../tor-llcrypto", version = "0.21.0" }
tor-netdir = { path = "../tor-netdir", version = "0.21.0", features = ["testing"] }
tor-persist = { path = "../tor-persist", version = "0.21.0", features = ["testing"] }
tor-rtcompat = { path = "../tor-rtcompat", version = "0.21.0", features = ["tokio", "native-tls"] }
tor-rtmock = { path = "../tor-rtmock", version = "0.21.0" }
[package.metadata.docs.rs]
all-features = true
